
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_18__ TYPE_5__ ;
typedef struct TYPE_17__ TYPE_4__ ;
typedef struct TYPE_16__ TYPE_3__ ;
typedef struct TYPE_15__ TYPE_2__ ;
typedef struct TYPE_14__ TYPE_1__ ;


struct TYPE_18__ {int flags; int org_len; int org_pos; } ;
struct TYPE_17__ {int max_hints; int num_hints; TYPE_1__* hint_masks; TYPE_5__* hints; int * zone; scalar_t__ num_zones; TYPE_5__* sort; TYPE_5__* sort_global; TYPE_5__* zones; } ;
struct TYPE_16__ {int flags; int len; int pos; } ;
struct TYPE_15__ {int num_hints; TYPE_3__* hints; } ;
struct TYPE_14__ {int num_masks; int masks; } ;
typedef TYPE_1__* PS_Mask_Table ;
typedef int PS_Mask ;
typedef TYPE_2__* PS_Hint_Table ;
typedef TYPE_3__* PS_Hint ;
typedef TYPE_4__* PSH_Hint_Table ;
typedef TYPE_5__* PSH_Hint ;
typedef int FT_UInt ;
typedef int FT_Memory ;
typedef int FT_Error ;


 scalar_t__ FT_NEW_ARRAY (TYPE_5__*,int) ;
 int FT_TRACE0 (char*) ;
 int FT_UNUSED (TYPE_1__*) ;
 int psh_hint_table_record (TYPE_4__*,int) ;
 int psh_hint_table_record_mask (TYPE_4__*,int ) ;

__attribute__((used)) static FT_Error
  psh_hint_table_init( PSH_Hint_Table table,
                       PS_Hint_Table hints,
                       PS_Mask_Table hint_masks,
                       PS_Mask_Table counter_masks,
                       FT_Memory memory )
  {
    FT_UInt count;
    FT_Error error;

    FT_UNUSED( counter_masks );


    count = hints->num_hints;


    if ( FT_NEW_ARRAY( table->sort, 2 * count ) ||
         FT_NEW_ARRAY( table->hints, count ) ||
         FT_NEW_ARRAY( table->zones, 2 * count + 1 ) )
      goto Exit;

    table->max_hints = count;
    table->sort_global = table->sort + count;
    table->num_hints = 0;
    table->num_zones = 0;
    table->zone = ((void*)0);


    {
      PSH_Hint write = table->hints;
      PS_Hint read = hints->hints;


      for ( ; count > 0; count--, write++, read++ )
      {
        write->org_pos = read->pos;
        write->org_len = read->len;
        write->flags = read->flags;
      }
    }



    if ( hint_masks )
    {
      PS_Mask mask = hint_masks->masks;


      count = hint_masks->num_masks;
      table->hint_masks = hint_masks;

      for ( ; count > 0; count--, mask++ )
        psh_hint_table_record_mask( table, mask );
    }


    if ( table->num_hints != table->max_hints )
    {
      FT_UInt idx;


      FT_TRACE0(( "psh_hint_table_init: missing/incorrect hint masks\n" ));

      count = table->max_hints;
      for ( idx = 0; idx < count; idx++ )
        psh_hint_table_record( table, idx );
    }

  Exit:
    return error;
  }
